update ai for 5th phase